// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Prueba en: GifExpertApp.js Debe: Mostrar listado de categorías 1`] = `
<Fragment>
  <h2>
    GifExpertAps
  </h2>
  <CategoryAdd
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Yuyu Hakusho"
      key="Yuyu Hakusho"
    />
    <GifGrid
      category="Death Note"
      key="Death Note"
    />
  </ol>
</Fragment>
`;

exports[`Prueba en: GifExpertApp.js Debe: Retornar componente <GifExpertApp /> 1`] = `
<Fragment>
  <h2>
    GifExpertAps
  </h2>
  <CategoryAdd
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
